--- a/module_config.json
+++ b/module_config.json
@@ -74,10 +74,8 @@
       "canonicalName": ":components:hotel-module:foundation",
       "format": "bundle_foundation",
       "group": "hotel",
-      "binary_artifact": "com.jamesfchen:hotel-foundation:1.0",
-      "deps": [
-        ":framework:loader"
-      ]
+      "binary_artifact": "com.jamesfchen:hotel-foundation:1.0"
+
     },
     {
       "simpleName": "framework-loader",
