fix complie error
Signed-off-by: JamesfChen <hawks.jamesf@gmail.com>

--- a/module_config.json
+++ b/module_config.json
@@ -74,7 +74,10 @@
       "canonicalName": ":components:hotel-module:foundation",
       "format": "bundle_foundation",
       "group": "hotel",
-      "binary_artifact": "com.jamesfchen:hotel-foundation:1.0"
+      "binary_artifact": "com.jamesfchen:hotel-foundation:1.0",
+      "deps": [
+        ":framework:loader"
+      ]
 
     },
     {
