--- a/script/module_publisher.gradle
+++ b/script/module_publisher.gradle
@@ -97,9 +97,15 @@ afterEvaluate {
             }
         }
     }
-    assemble.dependsOn "$project.path:publishToMavenLocal"
-    assembleDebug.dependsOn "$project.path:publishToMavenLocal"
-    assembleRelease.dependsOn "$project.path:publishToMavenLocal"
+//    assemble.dependsOn "$project.path:publishToMavenLocal"
+//    assembleDebug.dependsOn "$project.path:publishToMavenLocal"
+//    assembleRelease.dependsOn "$project.path:publishToMavenLocal"
+}
+tasks.whenTaskAdded {
+    task ->
+        if ("assembleRelease" == task.name || 'assembleDebug' == task.name || 'assemble' == task.name) {
+            publishToMavenLocal.dependsOn assemble
+        }
 }
 static def isWindows() {
     return System.properties['os.name'].contains('Windows');
