--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,4 @@ android.debug.obsoleteApi=true
 -Djavax.net.ssl.trustStore=/path/to/truststore -Djavax.net.ssl.trustStorePassword=password
 android.injected.testOnly=false
 
-excludeModules=hotel-bundle2,framework-flutter,home-myhome,home-main
-sourceModules=app,hotel-bundle1,hotel-lint,framework-loader,framework-router,framework-network,framework-av,framework-image,\
-  framework-uicomponent,framework-mockserver,framework-storage,hotel-main,hotel-foundation,framework-common
-apps=hotel-main,app
+applicationId=com.jamesfchen.spacecraft
