--- a/script/app_module.gradle
+++ b/script/app_module.gradle
@@ -64,7 +64,7 @@ android {
             }
         }
         debug {
-//            minifyEnabled true
+            minifyEnabled false
 //            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             applicationIdSuffix = '.debug'
