--- a/components/hotel-module/main/src/main/AndroidManifest.xml
+++ b/components/hotel-module/main/src/main/AndroidManifest.xml
@@ -9,6 +9,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        tools:replace="android:name"
-        tools:ignore="GoogleAppIndexingWarning" />
+        tools:replace="android:name,android:allowBackup"
+        android:allowBackup="false" />
 </manifest>
