--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,11 @@ buildscript {
     repositories {
         maven { url "https://jitpack.io" }
         maven { url 'https://plugins.gradle.org/m2/' }
-//        google()
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url uri("$rootDir/repo") }
         mavenCentral()
         mavenLocal()
+        google()
     }
     ext {
         compileSdkVersion = 30
@@ -58,7 +58,6 @@ buildscript {
         //4.优化：检查并重写代码，以进一步减小应用的 DEX 文件的大小。例如，如果 R8 检测到从未采用过给定 if/else 语句的 else {} 分支，则会移除 else {} 分支的代码。如需了解详情，请转到介绍代码优化的部分。
         classpath "com.android.tools.build:gradle:7.1.0-alpha01"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60-eap-25"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.70"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
 //        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
@@ -68,7 +67,7 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
         classpath 'com.google.firebase:perf-plugin:1.4.0'
 //        classpath 'com.hawksjamesf.plugin:perf:1.0.0'
-        classpath 'com.google.firebase:firebase-plugins:2.0.0'
+//        classpath 'com.google.firebase:firebase-plugins:2.0.0'
         classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.2'
         classpath "com.alibaba:arouter-register:1.0.2"
@@ -82,9 +81,9 @@ allprojects {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url uri("$rootDir/repo") }
-//        google()
         mavenLocal()
         mavenCentral()
+        google()
     }
     configurations.all {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
