--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -89,9 +89,9 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.10"
 //    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.60-eap-25"
 
-    debugApi 'me.ele:uetool:1.0.17'
-    releaseApi 'me.ele:uetool-no-op:1.0.17'
-    // if you want to show more attrs about Fresco's DraweeView
+//    debugApi 'me.ele:uetool:1.0.17'
+//    releaseApi 'me.ele:uetool-no-op:1.0.17'
+    // if you want to show more attrs a bout Fresco's DraweeView
 //    debugApi 'me.ele:uetool-fresco:1.0.17'
     api "com.squareup.okio:okio:2.9.0"
     api "androidx.appcompat:appcompat:1.3.0"
@@ -193,12 +193,12 @@ dependencies {
     releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
     debugApi "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
     api 'com.github.markzhai:blockcanary-android:1.5.0'
-
-    api 'com.google.firebase:firebase-core:19.0.0'
-    api 'com.google.firebase:firebase-perf:20.0.1'
-    api 'com.google.firebase:firebase-config:21.0.0'
-    api 'com.google.firebase:firebase-storage:20.0.0'
-    api 'com.google.firebase:firebase-storage-ktx:20.0.0'
+    api platform('com.google.firebase:firebase-bom:28.0.1')
+    api 'com.google.firebase:firebase-perf'
+    api 'com.google.firebase:firebase-perf-ktx'
+    api 'com.google.firebase:firebase-config'
+    api 'com.google.firebase:firebase-storage'
+    api 'com.google.firebase:firebase-storage-ktx'
 
     api 'com.facebook.stetho:stetho:1.5.1'
     api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
