--- a/components/account-module/main/build.gradle
+++ b/components/account-module/main/build.gradle
@@ -1,6 +1,6 @@
 apply from: "$rootDir.path/script/app_module.gradle"
 android {
     defaultConfig {
-        resValue "string", "app_name","spacecraft.app"
+        resValue "string", "app_name","account.app"
     }
 }
