--- a/components/home-module/main/build.gradle
+++ b/components/home-module/main/build.gradle
@@ -1,6 +1,6 @@
 apply from: "$rootDir.path/script/app_module.gradle"
 android {
     defaultConfig {
-        resValue "string", "app_name","home-module"
+        resValue "string", "app_name","home.app"
     }
 }
