--- a/components/home-module/main/src/main/AndroidManifest.xml
+++ b/components/home-module/main/src/main/AndroidManifest.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jamesfchen.home">
 
+    <application
+        android:label="@string/app_name"
+        >
+        <activity
+            android:name="com.jamesfchen.myhome.SplashActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/FullscreenTheme"
+            android:windowSoftInputMode="adjustPan">
+            <!--            launcher启动 start-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <!--            launcher启动 end -->
+
+        </activity>
+    </application>
 </manifest>
