--- a/components/hotel-module/main/src/main/AndroidManifest.xml
+++ b/components/hotel-module/main/src/main/AndroidManifest.xml
@@ -5,10 +5,20 @@
 
     <application
         android:name="com.jamesfchen.main.HotelApp"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         tools:replace="android:name,android:allowBackup"
-        android:allowBackup="false" />
+        android:icon="@mipmap/ic_launcher">
+        <activity
+            android:name="com.jamesfchen.bundle1.HotelMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
