--- a/components/account-module/main/src/main/AndroidManifest.xml
+++ b/components/account-module/main/src/main/AndroidManifest.xml
@@ -5,7 +5,14 @@
     <application
         android:label="@string/app_name"
         >
+        <activity android:name="com.jamesfchen.login.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
