--- a/components/hotel-module/bundle1/build.gradle
+++ b/components/hotel-module/bundle1/build.gradle
@@ -1,10 +1,11 @@
 //apply plugin: 'bundle-module'
 apply from: "$rootDir.path/script/bundle_module.gradle"
+
 //android {
 //    defaultConfig {
 
 //    }
 //
 //}
-//dependencies {
-//}
+dependencies {
+}
