--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,11 @@
 #Sat Mar 28 19:26:17 CST 2020
 android.enableJetifier=true
 android.useAndroidX=true
-firebasePerformanceInstrumentationEnabled=false
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"  -Dfile.encoding=UTF-8
+kotlin.code.style=official
 android.debug.obsoleteApi=true
 -Djavax.net.ssl.trustStore=/path/to/truststore -Djavax.net.ssl.trustStorePassword=password
 android.injected.testOnly=false
-
 applicationId=com.jamesfchen.spacecraft
+firebasePerformanceInstrumentationEnabled=false
+
