add jetpack compose
Signed-off-by: JamesfChen <hawks.jamesf@gmail.com>

--- a/components/hotel-module/bundle1/src/main/AndroidManifest.xml
+++ b/components/hotel-module/bundle1/src/main/AndroidManifest.xml
@@ -4,8 +4,12 @@
     <application>
         <activity
             android:name=".HotelMainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
+        <activity
+            android:name=".TestComposeActivity"
+            android:exported="true"
+            android:label="@string/title_activity_test_compose"
+            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar" />
     </application>
 
 </manifest>
