--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -93,6 +93,12 @@ dependencies {
     api "com.google.android.material:material:1.4.0-rc01"
     api 'androidx.vectordrawable:vectordrawable:1.1.0'
 
+    api "androidx.compose.ui:ui:$compose_version"
+    api "androidx.compose.material:material:$compose_version"
+    api "androidx.compose.ui:ui-tooling:$compose_version"
+    api 'androidx.activity:activity-compose:1.3.0-beta02'
+    androidTestApi "androidx.compose.ui:ui-test-junit4:$compose_version"
+
     //animotor
     api 'com.airbnb.android:lottie:3.2.2'
     api 'com.github.Almeros:android-gesture-detectors:v1.0'
