--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -21,9 +21,17 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        vectorDrawables {
+            useSupportLibrary true
+        }
+
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        useIR = true
+    }
+    composeOptions {
+        kotlinCompilerVersion '1.4.32'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
