--- a/components/hotel-module/bundle1/src/main/AndroidManifest.xml
+++ b/components/hotel-module/bundle1/src/main/AndroidManifest.xml
@@ -3,14 +3,13 @@
     package="com.jamesfchen.bundle1">
     <application>
         <activity
-            android:name=".HotelMainActivity"
+            android:name=".Bundle1Activity"
             android:exported="true" />
         <activity
-            android:name=".TestComposeActivity"
+            android:name="com.jamesfchen.bundle1.HomeActivity"
             android:exported="true"
-            android:label="@string/title_activity_test_compose"
+            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar"
             />
-<!--            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar"-->
     </application>
 
 </manifest>
