--- a/components/hotel-module/bundle2/src/main/AndroidManifest.xml
+++ b/components/hotel-module/bundle2/src/main/AndroidManifest.xml
@@ -2,4 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jamesfchen.bundle2">
 
+    <application>
+
+        <activity
+            android:name=".Bundle2Activity"
+            android:exported="true"
+            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar"
+            />
+    </application>
+
 </manifest>
